--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.40.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "elevenlabs-node": "^2.0.3",
     "express": "^4.19.1",
     "twilio": "^5.0.1"
   }
